OPTION(USE_GLUT "Use GLUT library" "ON")
MARK_AS_ADVANCED(USE_GLUT)

IF(USE_GLUT)
  INCLUDE (${CMAKE_ROOT}/Modules/FindGLUT.cmake)  
  IF(GLUT_FOUND)
    INCLUDE_DIRECTORIES(  ${GLUT_INCLUDE_DIR} ) 
    LINK_LIBRARIES(  ${GLUT_LIBRARIES} )
    ADD_DEFINITIONS(-DHAS_GLUT)
  ENDIF(GLUT_FOUND)
ENDIF(USE_GLUT)

AUX_SOURCE_DIRECTORY(   Slicer   SOVOpenGLRenderMethod_SRCS ) 
AUX_SOURCE_DIRECTORY(   2D   SOVOpenGLRenderMethod_SRCS ) 

ADD_LIBRARY(   SOVOpenGLRenderMethod ${SOVOpenGLRenderMethod_SRCS} ) 
TARGET_LINK_LIBRARIES(SOVOpenGLRenderMethod SOVCommon)
