PROJECT(FlTrackBall)
  
IF(USE_FLTK)

  INCLUDE(${CMAKE_ROOT}/Modules/FindFLTK.cmake)
  IF(HAS_FLTK)

    AUX_SOURCE_DIRECTORY(. FL_TRACKBALL_SRCS)
    
    INCLUDE_DIRECTORIES(
      ${FLTK_INCLUDE_PATH}
    )

    LINK_LIBRARIES( 
      ${FLTK_LIBRARY}
      ${OPENGL_LIBRARY}
    )

    ADD_LIBRARY(FlTrackBall ${FL_TRACKBALL_SRCS})

  ENDIF(HAS_FLTK)

ENDIF(USE_FLTK)
